<resources>
    <string name="app_name">Child_App</string>
    <string name="kidname">Name</string>
    <string name="kidage">Age</string>
    <string name="taskname">What is the Taks?</string>
    <string name="task">What is the Task?</string>
    <string name="explain">If you want to explain more ...</string>
    <string name="location">Location of the task</string>
    <string name="color">Random Color</string>
    <string name="title1">CREATE TASK</string>
    <string name="btnMon">MON</string>
    <string name="btnTue">TUE</string>
    <string name="btnWed">WED</string>
    <string name="btnThurs">THUR</string>
    <string name="btnFri">FRI</string>
    <string name="start">"START "</string>
    <string name="startTime">START  08.00</string>
    <string name="fifnishTime">FINISH 09.00</string>
    <string name="alarm">Alarm</string>
    <string name="btnCreate">CREATE</string>
    <string name="titleMaths">Maths</string>
    <string name="btnCount" />
    <string name="btncount">Count</string>
    <string name="btncalc">CALCULATION</string>
    <string name="btnNums">NUMBERS</string>
    <string name="alarmNote">-ALARM NOTE-</string>
    <string name="btnDone">OK!!!</string>
    <string name="alarmtime">08:00</string>
    <string name="greeting">WELL DONE</string>
    <string name="donebtn">Thank you</string>
    <string name="updateTask">UPDATE</string>
    <string name="time">Time</string>
    <string name="mondaytt">Mon</string>
    <string name="tuett">Tue</string>
    <string name="wedtt">Wed</string>
    <string name="thurtt">Thur</string>
    <string name="fritt">Fri</string>
</resources>