<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addTask"
        tools:layout_editor_absoluteX="-86dp"
        tools:layout_editor_absoluteY="-140dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="225dp"
            android:layout_height="63dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title1"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/input1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/btnMon"
            app:backgroundTint="#9C27B0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <Button
            android:id="@+id/buttonewed"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="30dp"
            android:text="@string/btnTue"
            app:backgroundTint="#4CAF50"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <Button
            android:id="@+id/button9"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:text="@string/btnThurs"
            app:backgroundTint="#FFEB3B"
            app:layout_constraintStart_toEndOf="@+id/buttonw"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <Button
            android:id="@+id/button10"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/btnFri"
            app:backgroundTint="#2196F3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input1"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/task"
            app:barrierMargin="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintBottom_toTopOf="@+id/discription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/discription"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/explain"
            app:barrierMargin="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/location"
            app:barrierMargin="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discription" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText3"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <Button
            android:id="@+id/buttonw"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/btnWed"
            app:backgroundTint="#E91E63"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintStart_toEndOf="@+id/buttonewed"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="135dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/startTime"
            android:inputType="textPersonName"
            android:text="@string/startTime"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="135dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/fifnishTime"
            android:inputType="textPersonName"
            android:text="@string/fifnishTime"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="84dp"
            android:layout_height="51dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:checkable="true"
            android:text="@string/alarm"
            app:chipIcon="@color/teal_700"
            app:chipIconVisible="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:text="@string/updateTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>